use arrows not quotes

--- a/sw/templates/admin/base_site.html
+++ b/sw/templates/admin/base_site.html
@@ -6,7 +6,7 @@
 {% block branding %}
 <h1 id="site-name">{% trans 'Django administration' %}</h1>
 <div style="padding:0 0 10px 10px">
-    <a href="{% url sw_hq %}">« Back to Sensible Washington HQ</a>
+    <a href="{% url sw_hq %}">&larr; Back to Sensible Washington HQ</a>
     |
     Please be careful here. Only perform operations you are <strong>absolutely sure</strong> about.
 </div>
