--- a/sw/templates/sidebars/moreteams.html
+++ b/sw/templates/sidebars/moreteams.html
@@ -2,13 +2,13 @@
     <h1>More teams</h1>
 
     <ul>
-        <li><a href="{% url teams_index %}">« All teams</a></li>
+        <li><a href="{% url teams_index %}">&larr; All teams</a></li>
         {% for parent in group.parents %}
-            <li><a href="{% url teams_team_index slug=parent.slug %}">« {{ parent.name }}</a></li>
+            <li><a href="{% url teams_team_index slug=parent.slug %}">&larr; {{ parent.name }}</a></li>
         {% endfor %}
         <li><strong>{{ group.name }}</strong></li>
         {% for child in group.children %}
-            <li><a href="{% url teams_team_index slug=child.slug %}">{{ child.name }} »</a></li>
+            <li><a href="{% url teams_team_index slug=child.slug %}">{{ child.name }} &rarr;</a></li>
         {% endfor %}
     </ul>
 </div>
