--- a/sw/templates/sidebars/teamrecentactions.html
+++ b/sw/templates/sidebars/teamrecentactions.html
@@ -15,6 +15,6 @@
         {% endif %}
     {% endwith %}
 
-    <p><a href="{% url team_activity_history slug=group.slug %}"><strong>Activity history »</strong></a></p>
+    <p><a href="{% url team_activity_history slug=group.slug %}"><strong>Activity history &rarr;</strong></a></p>
 </div>
 
