--- a/sw/templates/sidebars/yourteams.html
+++ b/sw/templates/sidebars/yourteams.html
@@ -22,7 +22,7 @@
 
         {% if not team_tree %}
             {# Only show this if we're in a team right now.  Redundant if we're on the teams index. #}
-            <ul><li><a href="{% url teams_index %}"><strong>All teams »</strong></a></li></ul>
+            <ul><li><a href="{% url teams_index %}"><strong>All teams &rarr;</strong></a></li></ul>
         {% endif %}
     {% endwith %}
 </div>
