--- a/sw/templates/sidebars/teammembers.html
+++ b/sw/templates/sidebars/teammembers.html
@@ -14,7 +14,7 @@
                 {% endfor %}
                 <li>
                     {% with members.count as num_members %}
-                        <a href="{% url teams_team_members slug=group.slug %}"><strong>All {{ num_members }} member{{ num_members|pluralize }} »</strong></a>
+                        <a href="{% url teams_team_members slug=group.slug %}"><strong>All {{ num_members }} member{{ num_members|pluralize }} &rarr;</strong></a>
                     {% endwith %}
                 </li>
             </ul>
