Update django-iris; use action_label of iris's ItemTypePlugins

--- a/sw/templates/iris/item_add.html
+++ b/sw/templates/iris/item_add.html
@@ -15,11 +15,7 @@
 {% endblock %}
 
 {% block body %}
-    <h1>
-        {% blocktrans with item_type_plugin.label as label %}
-            Add new {{ label }}
-        {% endblocktrans %}
-    </h1>
+    <h1>{% trans item_type_plugin.action_label %}</h1>
 
     {% include item_type_plugin.add_template %}
 {% endblock %}
