--- a/sw/templates/teams/team.html
+++ b/sw/templates/teams/team.html
@@ -28,7 +28,7 @@
         <p>This team is private.</p>
     {% else %}
         <div class="grid_4 alpha">
-            <h1>Recent topics</h1>
+            <h1><a href="{% url team_topics slug=group.slug %}">Latest topics</a></h1>
 
             {% with group|topicsjoined as topics_list %}
             {% with topics_list|qslimit:5 as topics_list %}
@@ -50,7 +50,7 @@
         </div>
 
         <div class="grid_4 omega">
-            <h1>Upcoming events</h1>
+            <h1><a href="{% groupurl dregni_index group %}">Upcoming events</a></h1>
 
             {% content_objects group "dregni.Event" as events %}
             {% with events|upcomingevents|qslimit:5 as events %}
