show 50 profiles at a time

--- a/sw/templates/idios/profiles.html
+++ b/sw/templates/idios/profiles.html
@@ -23,7 +23,7 @@
         <p><a href="?order=date">Sort by date joined</a></p>
     {% endif %}
 
-    {% autopaginate profiles %}
+    {% autopaginate profiles 50 %}
 
     <table width="100%">
         <thead>
