--- a/sw/templates/dashboard/index.html
+++ b/sw/templates/dashboard/index.html
@@ -19,26 +19,6 @@
     {% wikipagesnippet DashboardPreamble latest %}
 
     <div class="alpha grid_4">
-        <h1><a href="{% url dashboard_actions %}">Recent activity</a></h1>
-
-        {% if team_actions %}
-            <ul class="stream">
-                {% for action in team_actions|qslimit:20 %}
-                    <li class="event">
-                        {% include "activity/action.html" %}
-                    </li>
-                {% endfor %}
-            </ul>
-
-            <ul>
-                <li><a href="{% url dashboard_actions %}">More activity &rarr;</a></li>
-            </ul>
-        {% else %}
-            (No activity)
-        {% endif %}
-    </div>
-
-    <div class="grid_4">
         <h1><a href="{% url dashboard_topics %}">Latest topics</a></h1>
 
         {% if team_topics %}
@@ -59,7 +39,7 @@
         </ul>
     </div>
 
-    <div class="grid_4 omega">
+    <div class="grid_4">
         <h1><a href="{% url dashboard_events %}">Upcoming events</a></h1>
 
         {% if team_events %}
@@ -75,6 +55,28 @@
         <ul>
             <li><a href="{% url dashboard_events %}">Event calendar &rarr;</a></li>
         </ul>
+    </div>
+
+    <div class="grid_4 omega">
+        {% include "sidebars/yourteams.html" %}
+
+        <h1><a href="{% url dashboard_actions %}">Recent activity</a></h1>
+
+        {% if team_actions %}
+            <ul class="stream">
+                {% for action in team_actions|qslimit:10 %}
+                    <li class="event">
+                        {% include "activity/action.html" %}
+                    </li>
+                {% endfor %}
+            </ul>
+
+            <ul>
+                <li><a href="{% url dashboard_actions %}">More activity &rarr;</a></li>
+            </ul>
+        {% else %}
+            (No activity)
+        {% endif %}
     </div>
 
     <div class="clear"></div>
