More links to profiles and profile list

--- a/sw/templates/idios/profile.html
+++ b/sw/templates/idios/profile.html
@@ -213,6 +213,8 @@
                                     {% endfor %}
                                 </ul>
                             {% endif %}
+
+                            <p><a href="{% url profile_list_all %}">Browse all profiles &rarr;</a></p>
                         </div>
                     {% endif %}
                 {% endwith %}
