Show previous subject when changing subjects;  do not allow changing subject to same as before (e.g. not changing the subject at all)

--- a/sw/templates/iris/item_add.html
+++ b/sw/templates/iris/item_add.html
@@ -4,7 +4,7 @@
 {% load i18n %}
 {% load iris_tags %}
 
-{% block title %}{% blocktrans with item_type_plugin.label as label %}Add {{ label }}{% endblocktrans %} - {{ topic.subject }} - {{ block.super }}{% endblock %}
+{% block title %}{% blocktrans with item_type.plugin.label as label %}Add {{ label }}{% endblocktrans %} - {{ topic.subject }} - {{ block.super }}{% endblock %}
 
 {% block body_class %}item-add {{ block.super }}{% endblock %}
 
@@ -15,7 +15,7 @@
 {% endblock %}
 
 {% block body %}
-    <h1>{% trans item_type_plugin.action_label %}</h1>
+    <h1>{% trans item_type.plugin.action_label %}</h1>
 
-    {% include item_type_plugin.add_template %}
+    {% include item_type.plugin.add_template %}
 {% endblock %}
