Replace 'state' placeholder with 'teams'

--- a/sw/media/css/base.css
+++ b/sw/media/css/base.css
@@ -332,7 +332,7 @@ div#site-sections {
   background: #0b4f96;
   color: white; }
 
-.hq.state-section div#site-sections a#state-link {
+.hq.teams-section div#site-sections a#teams-link {
   background: #0b4f96;
   color: white; }
 
