--- a/sw/templates/teams/base.html
+++ b/sw/templates/teams/base.html
@@ -2,7 +2,7 @@
 
 {% load breadcrumbs feature_tag %}
 
-{% block body_class %}{{ block.super }} teams hq-section{% endblock %}
+{% block body_class %}{{ block.super }} teams teams-section{% endblock %}
 
 {% block page_title %}{% block head_title %}{% endblock %}{% endblock %}
 
