--- a/sw/templates/wakawaka/base.html
+++ b/sw/templates/wakawaka/base.html
@@ -8,7 +8,7 @@
 {% block page_title %}{% block title %}{% endblock %}{% endblock %}
 
 {% if group %}
-    {% block body_class %}{{ block.super }} team-{{ group.slug }} hq-section{% endblock %}
+    {% block body_class %}{{ block.super }} team-{{ group.slug }} teams-section{% endblock %}
 {% endif %}
 
 {% block breadcrumbs %}
